Tools/WebKitTestRunner/ios/mainIOS.mm
@@ -28,6 +28,7 @@
 #import "HIDEventGenerator.h"
 #import "TestController.h"
 #import "UIKitSPI.h"
+#import <pal/spi/ios/GraphicsServicesSPI.h>
 
 static int _argc;
 static const char **_argv;
@@ -54,8 +55,23 @@ static const char **_argv;
     RELEASE_ASSERT_NOT_REACHED();
 }
 
+- (void)handleKeyHIDEvent:(IOHIDEventRef)event
+{
+    {
+        auto keyboard = [self _hardwareKeyboard:NO];
+        WTFLogAlways("(Before): keyboard %p has modifier state: 0x%02x", keyboard, GSKeyboardGetLiveModifierState(keyboard));
+    }
+    [super handleKeyHIDEvent:event];
+    {
+        auto keyboard = [self _hardwareKeyboard:NO];
+        WTFLogAlways("(After): keyboard %p has modifier state: 0x%02x", keyboard, GSKeyboardGetLiveModifierState(keyboard));
+    }
+}
+
 - (void)_handleHIDEvent:(IOHIDEventRef)event
 {
+    [super _handleHIDEvent:event];
+
     [[HIDEventGenerator sharedHIDEventGenerator] markerEventReceived:event];
 }
 
